Fix media queries for images on small phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,6 @@
     margin-bottom: 100px;
 }
 
-
-
 /* --------------------- Nav ----------------*/
 .logo-image {
     height: 150px;
@@ -174,27 +172,11 @@ footer ul li:not(:last-child) {
     padding-right: 20px;
 }
 
-/*--- media query ---*/
-
-@media only screen and (max-width: 1850px) {
-    .home-banner-list li:not(:last-child) {
-        border-right: none;
-        margin-right: 20px;
-        padding-right: 20px;
-    }
-
+.download-resume-button {
+    border: 2px solid #fafafa;
 }
 
-
-@media only screen and (max-width: 1199px) {
-    footer ul li:not(:last-child) {
-        border-right: none;
-        margin-right: 20px;
-        padding-right: 20px;
-    }
-}
-
-/*--- about boxy ---*/
+/*--- about box ---*/
 .about-box {
     width: 100%;
     text-align: center;
@@ -306,7 +288,7 @@ hr {
     color: #fafafa;
     margin-bottom: 10px;
     margin-top: 75px;
-    font-family: "Font Awesome 5 Brands" ;
+    font-family: "Font Awesome 5 Brands";
     font-size: 60px;
     text-shadow: 2px 2px black;
 
@@ -324,4 +306,60 @@ hr {
 .port-link:hover {
     text-decoration: none;
     color: #e6ffe6;
+}
+
+/*--- media query ---*/
+
+@media only screen and (max-width: 1850px) {
+    .home-banner-list li:not(:last-child) {
+        border-right: none;
+        margin-right: 20px;
+        padding-right: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 500px) {
+    .about-image {
+        height: 150px;
+        width: 150px;
+        margin-top: 10px;
+    }
+
+    .about-box h1 {
+        text-shadow: 1px 1px black;
+        font-size: 45px;
+    }
+
+    .about-box hr {
+        width: 80px;
+    }
+
+    .link-icon img {
+        height: 150px;
+        width: 150px;
+        margin-bottom: 20px;
+        border: 2px solid grey;
+    }
+
+    .home-banner-list li {
+        font-size: 30px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-shadow: 2px 2px black;
+    }
+
+    .name-tag {
+        margin-top: 20px;
+    }
+
+}
+
+
+@media only screen and (max-width: 1199px) {
+    footer ul li:not(:last-child) {
+        border-right: none;
+        margin-right: 20px;
+        padding-right: 20px;
+    }
 }
